--- a/prepros.config
+++ b/prepros.config
@@ -878,6 +878,23 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "styles/_projects.scss",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "styles/main.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      }
+    ]
   }
 }
