--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,17 @@
     },
     "files": [
       {
+        "file": "styles/_contact.scss",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "styles/_projects.scss",
         "config": {
           "autoCompile": true
